--- a/Concurrent_NSOperations_Mac/Concurrent_NSOperations_Mac.xcodeproj/xcshareddata/xcschemes/Concurrent_NSOperations_Mac.xcscheme
+++ b/Concurrent_NSOperations_Mac/Concurrent_NSOperations_Mac.xcodeproj/xcshareddata/xcschemes/Concurrent_NSOperations_Mac.xcscheme
@@ -30,13 +30,13 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.GDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.GDB"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       displayScaleIsEnabled = "NO"
       displayScale = "1.00"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
       <BuildableProductRunnable>
          <BuildableReference
             BuildableIdentifier = "primary"
